--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.jpa.hibernate.ddl-auto=update
 
 #spring.datasource.url=jdbc:mysql://localhost:3306/moneymanager
 #spring.datasource.username=root
-#spring.datasource.password=
+#spring.datasource.password=${LOCAL_DB_PASSWORD}
 
 
 spring.jpa.show-sql= true
